# template_lib

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt  app.cpp
cmake/: &{root}Config.cmake.in  phimeConfig.cmake.in
cmake/phake/: .gitignore  CMakeLists.txt  README.md
cmake/phake/cmake/: functions.cmake  git.cmake  libs.cmake  parse.cmake
include/phime/: phime.hpp
src/: CMakeLists.txt  phime.cpp
tests/: CMakeLists.txt  test.cpp
